fix: fixed double scrolling containers

--- a/app/landing.module.scss
+++ b/app/landing.module.scss
@@ -4,7 +4,7 @@
   overflow-x: hidden;
 
   @media (width <= 1000px) {
-    height: 500lvh;
+    height: fit-content;
   }
 }
 
